# HealthMate-AI

./: .gitignore  Groq.ipynb  README.md  Text_Feature_Engineering_Notebook.ipynb  access-diff-llms.ipynb  amazon_reviews.csv  app.py  encoding-embedding.ipynb  encoding.ipynb  requirements.txt  text_feature_engineering-checkpoint.ipynb
Class-04-11-26/: classicallearning.ipynb
ai-assistant/: .gitignore  README.md  requirements.txt
ai-assistant/notebooks/: dpo_alignment.ipynb  instruction_finetuning.ipynb  non_instruction_finetuning_v2.ipynb
ai-assistant/reports/: base_model_evaluation.md
ai-assistant/src/: inferencey1.py  train.py
data/: instruction_dataset.jsonl  non_instruction_data.txt  preference_dataset.jsonl
models/dpo_model/: README.md
models/sft_model/: adapter_config.json  tokenizer_config.json
notebooks/: dpo_alignment.ipynb
reports/: final_evaluation.md  fine_tuning_explanation.md  sft_model_comparison.md
src/: __init__.py  inference.py  inferency.py  train.py
tests/: test_inference.py
text-feature-engineering-main/: README.md  data\amazon_reviews.csv  featureengineering.ipynb  preprocessing.ipynb  pyproject.toml  usecase.ipynb  vocabulary.ipynb  webscapping.ipynb
text-feature-engineering-main/data/: amazon_reviews.csv  amazon_reviews_preprocessed.csv  amazon_reviews_vocabulary.csv  amazon_reviews_vocabulary_mapping.json
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothORPOTrainer.py  UnslothRLOOTrainer.py  UnslothSFTTrainer.py
